tests/errors/mod_cpp_modfile_main.f90
program mod_cpp_modfile_main
  use mod_cpp_modfile_module, only: s
  implicit none
  real :: r
  call s(r)
end program mod_cpp_modfile_main

